--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.application.name = portal
 
+server.port=8080
+server.servlet.context-path=/portal
+
+url.matriculacion.rest.service = http://localhost:9092/matriculacion/
